--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,12 +98,12 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
 
   :root {
   --background: 200 100% 85%; /* سماوي فاتح */
-  --foreground: 0 100% 20%; /* أحمر داكن */
+  --foreground: 0 0% 20%;
 
-  --primary: 120 100% 40%; /* أخضر قوي */
+  --primary: 217 89% 61%;
   --primary-foreground: 300 100% 95%; /* وردي فاتح */
 
-  --secondary: 60 100% 50%; /* أصفر */
+  --secondary: 213 36% 95%; /* 3bl */
   --secondary-foreground: 240 100% 30%; /* أزرق داكن */
 
   --card: 180 100% 80%; /* تركواز */
