--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,13 +97,13 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   }
 
   :root {
-  --background: 200 100% 85%; /* سماوي فاتح */
-  --foreground: 0 100% 20%; /* أحمر داكن */
+  --background: 0 0% 94%; /* لون الخلفيه */
+  --foreground: 0 0% 20%; /* لون الخط */
 
-  --primary: 120 100% 40%; /* أخضر قوي */
+  --primary: 217 89% 61%; /* لون الاساسي */
   --primary-foreground: 300 100% 95%; /* وردي فاتح */
 
-  --secondary: 60 100% 50%; /* أصفر */
+  --secondary: 213 36% 95%; /* لون خلفيه الايقونه*/
   --secondary-foreground: 240 100% 30%; /* أزرق داكن */
 
   --card: 180 100% 80%; /* تركواز */
