--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,7 +97,7 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   }
 
   :root {
-  --background: 0 0% 94%; /* لون الخلفيه */
+  --background: 0 0% 100%; /* لون الخلفيه */
   --foreground: 0 0% 20%; /* لون الخط */
 
   --primary: 217 89% 61%; /* لون الاساسي */
@@ -121,7 +121,7 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   --destructive: 0 100% 50%; /* أحمر قوي */
   --destructive-foreground: 180 100% 95%; /* سماوي فاتح جداً */
 
-  --border: 260 100% 60%; /* بنفسجي */
+  --border: 0 0% 85%; /* لون حدود */
   --input: 100 100% 60%; /* أخضر فاتح */
   --ring: 50 100% 50%; /* ذهبي */
 
