--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,9 +104,9 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   --primary-foreground: 300 100% 95%; /* وردي فاتح */
 
   --secondary: 213 36% 95%; /* لون خلفيه الايقونه*/
-  --secondary-foreground: 240 100% 30%; /* أزرق داكن */
+  --secondary-foreground: 0 0% 40%; /* لون الفقرة */
 
-  --card: 180 100% 80%; /* تركواز */
+  --card: 0 0% 100%; /* لون البطاقه */
   --card-foreground: 20 100% 30%; /* برتقالي غامق */
 
   --popover: 280 100% 85%; /* بنفسجي فاتح */
