--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,17 +97,17 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   }
 
   :root {
-  --background: 0 0% 100%; /* لون الخلفيه */
+  --background: 0 0% 94%; /* لون الخلفيه */
   --foreground: 0 0% 20%; /* لون الخط */
 
   --primary: 217 89% 61%; /* لون الاساسي */
   --primary-foreground: 300 100% 95%; /* وردي فاتح */
 
   --secondary: 213 36% 95%; /* لون خلفيه الايقونه*/
-  --secondary-foreground: 0 0% 40%; /* لون الفقرة */
+  --secondary-foreground: 0 84% 60%; /*  احمر */
 
   --card: 0 0% 100%; /* لون البطاقه */
-  --card-foreground: 20 100% 30%; /* برتقالي غامق */
+  --card-foreground: 0 72% 51%; /* اخضر */
 
   --popover: 280 100% 85%; /* بنفسجي فاتح */
   --popover-foreground: 120 100% 20%; /* أخضر غامق */
