--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,37 +97,36 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
   }
 
   :root {
-  --background: 0 0% 94%; /* لون الخلفيه */
-  --foreground: 0 0% 20%; /* لون الخط */
+  --background: #f0f0f0;           /* لون الخلفيه */
+  --foreground: #333333;           /* لون الخط */
 
-  --primary: 217 89% 61%; /* لون الاساسي */
-  --primary-foreground: 300 100% 95%; /* وردي فاتح */
+  --primary: #4c8fff;              /* لون الاساسي */
+  --primary-foreground: #f7e6ff;   /* وردي فاتح */
 
-  --secondary: 213 36% 95%; /* لون خلفيه الايقونه*/
-  --secondary-foreground: 0 84% 60%; /*  احمر */
+  --secondary: #e5ecf7;            /* لون خلفيه الايقونه */
+  --secondary-foreground: #d91b1b; /* احمر */
 
-  --card: 0 0% 100%; /* لون البطاقه */
-  --card-foreground: 0 72% 51%; /* اخضر */
+  --card: #ffffff;                  /* لون البطاقه */
+  --card-foreground: #00b050;      /* اخضر */
 
-  --popover: 280 100% 85%; /* بنفسجي فاتح */
-  --popover-foreground: 120 100% 20%; /* أخضر غامق */
+  --popover: #f2ccff;              /* بنفسجي فاتح */
+  --popover-foreground: #008000;   /* أخضر غامق */
 
-  --muted: 30 100% 70%; /* برتقالي فاتح */
-  --muted-foreground: 210 100% 25%; /* أزرق */
+  --muted: #ffd699;                 /* برتقالي فاتح */
+  --muted-foreground: #003f9b;     /* أزرق */
 
-  --accent: 340 100% 75%; /* وردي قوي */
-  --accent-foreground: 60 100% 20%; /* زيتوني */
+  --accent: #ff1aa6;               /* وردي قوي */
+  --accent-foreground: #999900;    /* زيتوني */
 
-  --destructive: 0 100% 50%; /* أحمر قوي */
-  --destructive-foreground: 180 100% 95%; /* سماوي فاتح جداً */
+  --destructive: #ff0000;          /* أحمر قوي */
+  --destructive-foreground: #b3ffff; /* سماوي فاتح جداً */
 
-  --border: 0 0% 85%; /* لون حدود */
-  --input: 100 100% 60%; /* أخضر فاتح */
-  --ring: 50 100% 50%; /* ذهبي */
+  --border: #d9d9d9;               /* لون حدود */
+  --input: #66ff66;                /* أخضر فاتح */
+  --ring: #ffff00;                  /* ذهبي */
 
   --radius: 1rem;
 }
-
   @layer base {
     html {
       scroll-behavior: smooth;
