--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Patrick+Hand&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Patrick+Hand&display=swap"
   rel="stylesheet"
 />
 
@@ -92,7 +92,7 @@ const canonicalUrl = `${siteUrl.replace(/\/$/, '')}${canonicalPath}`;
     --radius-xl: 1.5rem;
 
     --font-sans: 'Nunito', sans-serif;
-    --font-heading: 'Inter', sans-serif;
+    --font-heading: 'Poppins', sans-serif;
     --font-hand: 'Patrick Hand', cursive;
   }
 
